# zap

./: Cargo.toml  README.md
src/: database.rs  email.rs  gen.rs  main.rs
