[package]
name = "zap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
diesel = { version = "2.0.0", features = ["postgres","sqlite"] }
dotenvy = "0.15"
rand = "0.8.5"
lettre = "0.10"