[package]
name = "zap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rand = "0.8.5"
lettre = "0.10"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
tokio-postgres = "0.7.8"
tokio = { version = "1", features = ["full"] }